<resources>
    <string name="app_name">Operacion Tienda</string>
    <string name="login_label">Iniciar Sesion</string>
    <string name="login_mail">Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_newAccount">Crear Cuenta</string>
    <string name="register_name">Nombre</string>
    <string name="register_lastName">Apellido</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_team">Equipos</string>

    <string name="home_welcome">Hola,</string>

    <string name="team_create_title">Crea a tu equipo</string>
    <string name="team_create_members">Agregar nuevo integrante</string>
    <string name="team_delete_members">Eliminar integrante</string>
    <string name="team_create_phrase">Frase</string>
    <string name="team_create_button">Crear</string>

    <string name="team_bottom_sheet_title">Agrega un nuevo integrante a tu equipo</string>
    <string name="team_bottom_sheet_button">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>