<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/team_create_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_teamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_teamPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/team_create_phrase"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_newTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_create_button" />
</LinearLayout>